iac/local/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  type: NodePort
  ports:
  - name: api-port
    port: 9000
    targetPort: 9000
    nodePort: 32000
    protocol: TCP
  - name: console-port
    port: 9001
    targetPort: 9001
    nodePort: 32001
    protocol: TCP
  selector:
    app: minio
